# main

./: .gitignore  .gitmodules  .need_build.kate-swp  Packages ready Rebuild for New Toolchain  README.md  bagimlilik-belirleme-devel.txt  bagımlılık-belirleme-devel.txt  components.py  components.xml  distribution.xml  find-packages-not-compiled-in-farm  history_reset.py  main_35_list.txt  main_365_list.txt  need_build  perl-IO-Socket-INET6-2.72-5-p2-x86_64.pisi  pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum  ssr-master.pisi  test.md
.github/workflows/: mirror.yml
accessibility/: component.xml
accessibility/brltty/: actions.py  pspec.xml
accessibility/liblouis/: actions.py  pspec.xml
accessibility/onboard/: actions.py  pspec.xml
accessibility/onboard/files/: 00-Fix-build-with-musl.patch
accessibility/orca/: actions.py  pspec.xml
ai/: component.xml
ai/python3-anthropic/: actions.py  pspec.xml
ai/python3-deepseek-ai/: pspec.xml
ai/python3-google-genai/: actions.py  pspec.xml
ai/python3-openai/: actions.py  pspec.xml
antivirus/clamav/: actions.py  pspec.xml
antivirus/clamav-gui/: actions.py  pspec.xml
desktop/: pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum
desktop/budgie/: component.xml
desktop/budgie/budgie-control-center/: actions.py  pspec.xml
desktop/budgie/budgie-desktop/: actions.py  pspec.xml
desktop/budgie/budgie-desktop-view/: pspec.xml
desktop/budgie/budgie-extras/: actions.py  pspec.xml  translations.xml
desktop/budgie/budgie-screensaver/: actions.py  pspec.xml
desktop/budgie/budgie-session/: actions.py  pspec.xml  translations.xml
desktop/cinnamon/blueberry/: actions.py  pspec.xml
desktop/cinnamon/caribou/: actions.py  pspec.xml
desktop/cinnamon/cinnamon-control-center/: actions.py  pspec.xml  translations.xml
desktop/cinnamon/cinnamon-desktop/: actions.py  pspec.xml  translations.xml
desktop/cinnamon/cinnamon-menus/: actions.py  pspec.xml
desktop/cinnamon/cinnamon-screensaver/: actions.py  pspec.xml  translations.xml
desktop/cinnamon/cinnamon-session/: actions.py  pspec.xml  translations.xml
desktop/cinnamon/cinnamon-settings-daemon/: actions.py  pspec.xml  translations.xml
desktop/cinnamon/cinnamon-sounds/: actions.py  pspec.xml  translations.xml
desktop/cinnamon/cinnamon-translations/: actions.py  pspec.xml  translations.xml
desktop/fluxbox/: component.xml
desktop/kde/: component.xml
desktop/kde6/: component.xml
desktop/lumina/: component.xml
desktop/lumina-desktop/: actions.py  translations.xml
desktop/mate/eom/files/a/: configure.ac
desktop/mate/eom/files/a/src/: eom-thumbnail.c
desktop/polo/: actions.py  pspec.xml  translations.xml
editor/: component.xml
editor/bluefish/: actions.py  pspec.xml  translations.xml
editor/cutemarked/: actions.py  pspec.xml  translations.xml
editor/discount/: actions.py  component.xml  pspec.xml  translations.xml
editor/ed/: actions.py  pspec.xml
editor/editline/: actions.py  pspec.xml  translations.xml
editor/emacs/: component.xml
editor/geany/: actions.py  pspec.xml  translations.xml
editor/geany-colorschemes/: actions.py  pspec.xml
editor/geany-plugins/: actions.py  pspec.xml
editor/ghostwriter/: actions.py  pspec.xml  translations.xml
editor/gimagereader-qt/: actions.py  pspec.xml  translations.xml
editor/helix/: actions.py  component.xml  pspec.xml
editor/krita/: actions.py  pspec.xml  translations.xml
editor/liblangtag/: actions.py  pspec.xml
editor/libmspub/: actions.py  pspec.xml
editor/medit/: actions.py  pspec.xml
editor/nano/: actions.py  pspec.xml
editor/poedit/: actions.py  pspec.xml  translations.xml
editor/scdoc/: actions.py  pspec.xml  translations.xml
editor/scite/: actions.py  pspec.xml
editor/tex/: component.xml
editor/texlive-bin/: actions.py  pspec.xml
editor/texstudio/: actions.py  pspec.xml
game/: component.xml
game/action/: component.xml
game/arcade/: component.xml
game/board/: component.xml
game/fps/: component.xml
game/gnome-chess/: actions.py  pspec.xml  translations.xml
game/logic/: component.xml
game/misc/: component.xml
game/strategy/: component.xml
multimedia/: pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum
multimedia/converter/: component.xml
multimedia/sound/: pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum
multimedia/video/: pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum
multimedia/videoplayer/: component.xml
network/chat/: component.xml
network/plugin/: component.xml
network/voip/: component.xml
office/abiword/: actions.py  pspec.xml
office/cherrytree/: actions.py  pspec.xml
office/focuswriter/: actions.py  pspec.xml  translations.xml
office/homebank/: pspec.xml  translations.xml
office/kexi/: pspec.xml  translations.xml
office/libreoffice/: component.xml
office/mindforger/: actions.py  pspec.xml  translations.xml
office/zanshin/: actions.py  pspec.xml
office/zim/: actions.py  pspec.xml
plasma-browser-integration/: actions.py  pspec.xml
plasma-vault/: actions.py
programming/: pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum
programming/misc/: pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum
programming/misc/http-parser/files/: meson.build
server/bind/: actions.py  pspec.xml
server/dhcp/: actions.py  pspec.xml
server/ntp/: actions.py  pspec.xml
server/openldap/: actions.py  pspec.xml
server/openssh/: actions.py  pspec.xml
server/postfix/: actions.py  pspec.xml
server/rpcbind/: actions.py  pspec.xml
server/samba/: actions.py  pspec.xml
server/sshpass/: actions.py  pspec.xml  translations.xml
system/libgssglue-0.4/: actions.py  pspec.xml
util/antivirus/: component.xml
util/dock/: component.xml
x11/vulkan/: component.xml  pisi-index.xml  pisi-index.xml.sha1sum  pisi-index.xml.xz  pisi-index.xml.xz.sha1sum
x11/wayland/: component.xml
(+10507 files in other folders)
